--- a/style.css
+++ b/style.css
@@ -3952,6 +3952,33 @@ span.error {
   }
 }
 
+.parsed__post {
+  position: fixed;
+  left: 0px;
+  bottom: 60px;
+  width: 200px;
+  border: 2px solid black;
+  background: black;
+}
+
+.parsed__post a {
+  overflow: hidden;
+  position: relative;
+  width: 200px;
+  text-decoration: none;
+}
+
+.parsed__post span {
+  font-size: 14px;
+  font-family: "Oswald", sans-serif;
+  color: #fff;
+}
+
+.parsed__post img {
+  width: 100%;
+  height: auto;
+}
+
 /* ------------------------
 	Blog/Category/Archives
 ------------------------ */
