--- a/sass/_menu_hover.scss
+++ b/sass/_menu_hover.scss
@@ -155,14 +155,14 @@ $menuHeight: 60px;
       position: relative;
       &:before { 
         font-family: "Font Awesome 5 Pro";
-        color: rgba($lightColor, 1);
+        color: rgba($secondaryAlt, 1);
         font-size: 30px;
         font-weight: 100;
         transition: 0.2s all;
         position: absolute;
-        left: 180px;
+        left: 30px;
         transition: all .2s ease-in-out;
-        font-weight: 900;
+        font-weight: 100;
       @include media($desktop) {
         left: calc( 50% - 15px;);
         color: $tertiaryAlt !important;
