--- a/sass/_menu_touch.scss
+++ b/sass/_menu_touch.scss
@@ -76,14 +76,17 @@
     a {
       text-transform: uppercase;
       //  letter-spacing: 1px;
-      font-family: $secondaryFont;
+      font-family: $primaryFont;
 
       text-decoration: none;
       display: block;
-      color: rgba($lightColor, 1); // Set color for menu items
+      color: rgba($secondaryAlt, 1); // Set color for menu items
       line-height: 1em;
       font-size: 22px; // Set font size for menu items
-      font-weight: 400;
+      font-weight: 300;
+      letter-spacing: 1px;
+      // border: 1px solid pink;
+      // padding-left: 40px;
     }
     // End "a" reset
 
@@ -91,7 +94,7 @@
 
     .menu-item {
       > a {
-        padding: 16px 20px;
+        padding: 16px 20px 16px 80px;
         // border-bottom: 1px solid rgba($lightColor, .15);
       }
     }
