--- a/sass/_front.scss
+++ b/sass/_front.scss
@@ -376,6 +376,12 @@
   background: black;
   opacity: 0;
   transition: all .2s ease-in-out;
+  font-size: 10px;
+  line-height: 12px;
+  text-align: left;
+  padding-bottom: 10px;
+  font-weight: 100;
+  z-index: 9999;
   &.active {
     opacity: 1;
     left: 0px;
@@ -385,22 +391,21 @@
 .parsed__post a {
   overflow: hidden;
   position: relative;
-  width: 200px;
-  // height: 140px;
+  text-align: left;
   text-decoration: none;
 }
 
 .parsed__post span {
-  font-size: 10px;
-  font-weight: 100;
   font-family: $primaryFont;
   color: #fff;
+  display: block;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 
 .parsed__post img {
-  // position: absolute;
   width: 100%;
   height: auto;
-  // z-index: 1;
+  padding-bottom: 10px;
 }
