--- a/style.css
+++ b/style.css
@@ -3985,6 +3985,12 @@ span.error {
   opacity: 0;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
+  font-size: 10px;
+  line-height: 12px;
+  text-align: left;
+  padding-bottom: 10px;
+  font-weight: 100;
+  z-index: 9999;
 }
 
 .parsed__post.active {
@@ -3995,20 +4001,22 @@ span.error {
 .parsed__post a {
   overflow: hidden;
   position: relative;
-  width: 200px;
+  text-align: left;
   text-decoration: none;
 }
 
 .parsed__post span {
-  font-size: 10px;
-  font-weight: 100;
   font-family: "Oswald", sans-serif;
   color: #fff;
+  display: block;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .parsed__post img {
   width: 100%;
   height: auto;
+  padding-bottom: 10px;
 }
 
 /* ------------------------
