--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -320,7 +320,8 @@ header {
   .close-feed {
     z-index: 9999;
     position: fixed;
-    right: 20px;
+    right: 3px;
+    top: 0px;
     i {font-size: 30px}
   }
   .the-feed {
