--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,10 +1,17 @@
+/* Guttenberg Styles */
+.wp-block-cover {
+  max-height: 500px;
+  margin: 80px 0;
+}
+
+
 .content {
   font-family: $secondaryFont;
   @include media($tablet) {
+    width: 100%;
     // max-width: 1020px;
     // width: calc(100% - 350px;);
-    width: 100%;
-    margin-right: 150px;
+    // margin-right: 150px;
   }
 
   b,
@@ -20,8 +27,13 @@
       color: $primaryColor;
     }
   }
-
+  p {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
   h1 {
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 20px !important;
     margin-bottom: 40px;
     @include media($tablet) {
@@ -37,6 +49,8 @@
   h4,
   h5,
   h6 {
+    padding-left: 20px;
+    padding-right: 20px;
     color: $secondaryColor;
     font-weight: 200;
     a {
