--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -278,13 +278,35 @@ form {
   .page-441 & {
     display: none;
   }
+  .foot-video {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+  video {
+    position: absolute;
+    top: 0px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 280px;
+    z-index: 1;
+    margin: 0;
+    padding: 0;
+    object-fit: cover;
+    opacity: 1;
+    @include media($tablet) {
+      height: 600px;
+    }
+  }
+  }
   
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: 30px;
-  padding-bottom: 30px;
   text-align: center;
   margin-top: 40px;
   @include media($tablet) {
@@ -298,7 +320,7 @@ form {
    div {
     margin: 0 auto;
     max-width: 600px;
-    padding: 20px;
+    // padding: 20px;
     background: rgba(#000, 0.5);
   }
   h2 {
@@ -355,10 +377,10 @@ form {
 
 .lower-footer {
   padding-top: 40px !important;
-  padding-bottom: 100px !important;
+  padding-bottom: 40px !important;
   @include media($tablet) {
     padding-top: 60px !important;
-    padding-bottom: 100px !important;
+    padding-bottom: 40px !important;
   }
   @include media($desktop) {
     padding-bottom: 60px !important;
