--- a/sass/_front.scss
+++ b/sass/_front.scss
@@ -84,7 +84,7 @@
   @include media($tablet) {
     padding-top: 250px;
   }
-  h2 {
+  h1 {
     text-shadow: 2px 2px 2px $darkColor;
     max-width: 1040px;
     text-transform: uppercase;
@@ -108,7 +108,8 @@
       line-height: 60px;
     }
   }
-  h3 {
+  h2 {
+    display: block;
     text-transform: uppercase;
     font-weight: 900;
     text-shadow: 2px 2px 1px $darkColor;
@@ -126,6 +127,9 @@
       font-size: 30px;
     }
   }
+  ul {
+    margin-top: 0 !important;
+  }
 }
 .home-button {
   color: $lightColor;
@@ -134,6 +138,11 @@
   background-color: transparent;
   border: 1px solid $lightColor;
   position: relative;
+  a {
+    color: #fff;
+    text-decoration: none;
+
+  }
   @include media($tablet) {
     margin-top: 30px;
     display: block;
