--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -30,12 +30,20 @@
   p {
     padding-left: 20px;
     padding-right: 20px;
+    @include media($tablet) {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
   }
   h1 {
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 20px !important;
     margin-bottom: 40px;
+    @include media($tablet) {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
     @include media($tablet) {
     margin-top: 20px !important;
       
@@ -49,10 +57,15 @@
   h4,
   h5,
   h6 {
+
     padding-left: 20px;
     padding-right: 20px;
     color: $secondaryColor;
-    font-weight: 200;
+    font-weight: 200; 
+    @include media($tablet) {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
     a {
       text-decoration: none;
     }
@@ -141,7 +154,7 @@
     // padding-top: 40px;
   }
   @include media($desktop) {
-    display: flex;
+    // display: flex;
     width: 100%;
   }
 
