--- a/style.css
+++ b/style.css
@@ -1924,6 +1924,10 @@ header .get-social a i {
   height: 100%;
 }
 
+.events .social-feed .the-feed {
+  background: red;
+}
+
 .social-feed .the-feed iframe {
   width: 100%;
   height: 100% !important;
