events iframe fix

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -316,6 +316,11 @@ header {
     @include media($tablet) {
       top: 0px;
     }
+    &.events {
+      .the-feed {
+        max-width: none;
+      }
+    }
   }
   .close-feed {
     z-index: 9999;
@@ -332,9 +337,7 @@ header {
     margin: 0 auto;
     margin-top: 0px;
     height: 100%;
-    .events & {
-      background: red;
-    }
+
     // border: 1px solid red;
     iframe {
       width: 100%;
