--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -5,13 +5,24 @@
 }
 
 
+
+.tmpl_type_page {
+  .content{
+    h1, h2, h3, h4 ,h5, h6, p {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+}
+
+
+
+
+
 .content {
   font-family: $secondaryFont;
   @include media($tablet) {
     width: 100%;
-    // max-width: 1020px;
-    // width: calc(100% - 350px;);
-    // margin-right: 150px;
   }
 
   b,
@@ -28,25 +39,13 @@
     }
   }
   p {
-    padding-left: 20px;
-    padding-right: 20px;
-    @include media($tablet) {
-      padding-left: 60px;
-      padding-right: 60px;
-    }
+
   }
   h1 {
-    padding-left: 20px;
-    padding-right: 20px;
     margin-top: 20px !important;
     margin-bottom: 40px;
     @include media($tablet) {
-      padding-left: 60px;
-      padding-right: 60px;
-    }
-    @include media($tablet) {
-    margin-top: 20px !important;
-      
+      margin-top: 20px !important;
     }
   }
   h2 {
@@ -56,17 +55,10 @@
   h3,
   h4,
   h5,
-  h6,
-  .gform_wrapper {
-
-    padding-left: 20px;
-    padding-right: 20px;
+  h6 {
     color: $secondaryColor;
     font-weight: 200; 
-    @include media($tablet) {
-      padding-left: 60px;
-      padding-right: 60px;
-    }
+
     a {
       text-decoration: none;
     }
